<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeSeek</string>
    <string name="save_search_btn_txt">Set As My Search  </string>
    <string name="signup">Sign Up</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="confirm_password">Confirm password: </string>
    <string name="sign_up_btn_txt">Sign Up!</string>
    <string name="sign_up_confirm_btn_txt">Sign Up</string>
    <string name="parse_app_id">Kx5pF8gQFrBxddV7yy9CkLPJyaDqFljarzG2Us4U</string>
    <string name="parse_client_id">efkdyeVOjYIf1S6HdGHlu09ywlsS7jhwLPdbWBHI</string>
    <string name="Login">Login</string>
    <string name="login_btn_txt">Login</string>
    <string name="add_new_apartment_txt">Add New Apartment</string>
    <string name="city_txt">City: </string>
    <string name="street_txt">Street: </string>
    <string name="neighborhood_txt">Neighborhood: </string>
    <string name="building_num_txt">Building: </string>
    <string name="apartment_num_txt">Apartment Number: </string>
    <string name="rooms_num_txt">Rooms: </string>
    <string name="rooms_str">Rooms</string>
    <string name="coin_name">NIS</string>
    <string name="area_txt">Area: </string>
    <string name="price_txt">Price: </string>
    <string name="floor_txt">Floor: </string>
    <string name="comments_txt">Comments: </string>
    <string name="client_comments_txt">My Comments: </string>
    <string name="add_apartment_confirm_btn_txt">Create\nApartment</string>
    <string name="new_apartment_btn_txt">Add Apartment</string>
    <string name="your_apartments_str">Your Apartments</string>
    <string name="owner_apartment_btn_txt">Owner Apartments</string>
    <string name="client_apartments_btn_txt">Client Apartments</string>
    <string name="search_apartments_btn_txt">Search Apartments</string>
    <string name="search_apartments_str">Search Apartments</string>
    <string name="search_results_str">Search Results</string>
    <string name="search_apartment_confirm_btn_txt">Search</string>
    <string name="from_txt">From</string>
    <string name="to_txt">To</string>
    <string name="radio_type_rent">Rent</string>
    <string name="radio_type_buy">Buy</string>
    <string name="add_photo">Add Photo</string>
    <string name="date">Date</string>
    <string name="visitors">Visitors</string>
    <string name="hours">Hours</string>
    <string name="subscribe_to_ap_btn">Add to My\nApartments</string>
    <string name="unsubscribe_from_ap_btn">Remove from My\nApartments</string>
    <string name="apartment_calendar_btn">View Visiting\nHours</string>
    <string name="apartment_share_btn">Share Apartment\nwith Friends</string>
    <string name="fetching_apartment_photo">Fetching apartment photo..</string>
    <string name="background_image_description">Background Image Bottom</string>
    <string name="background_image_top_ruler_description">Background Image Top Ruler</string>
    <string name="choose_client_owner_txt">Choose Your Account</string>
    <string name="search_apartment_txt">Search Apartment</string>
    <string name="publish_apartment_txt">Publish Apartment</string>
    <string name="error_has_occurred_txt">Error has occurred</string>
    <string name="error_sign">Error Sign</string>
    <string name="ok_btn_txt">OK</string>
    <string name="show_photos">Show Photos</string>
    <string name="send_to_friend">Send to friend</string>
    <string name="edit_apartment">Edit</string>
    <string name="apartment_remove">Delete Apartment</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="save_btn_txt">Save</string>
    <string name="chat_with_owner">Chat with Owner</string>
    <string name="send">Send</string>
    <string name="search_on_map_btn_txt">See Yourself On a Map</string>
    <string name="apartment_clients">Apartment clients</string>
    <string name="view_clients_list">View Clients\nList</string>
    <string name="chat">Chat</string>
    <string name="add_visiting_date_txt">Add Visiting Date</string>
    <string name="remove_visiting_date_txt">Remove Visiting Date</string>
    <string name="remove_meetups_str">Remove Selected Visits</string>
    <string name="attend_txt">Attend</string>
    <string name="unattend_txt">Un-Attend</string>
    <string name="calendar_str">Visitng Hours</string>
    <string name="set_visiting_hours_str">Set Visitng\nHours</string>
    <string name="my_calendar_str">My Calendar</string>
    <string name="my_apartments_str">My Apartments</string>
    <string name="date_str">Date:</string>
    <string name="start_hour_str">From:</string>
    <string name="end_hour_str">To:</string>
    <string name="clients_str">Clients</string>
    <string name="add_visiting_hours_str">Add Visiting Hours</string>
    <string name="com_postpc_homeseek_action_new_im">com.postpc.homeseek.action.NEW_IM</string>
    <string name="show_location_on_map">Show Location\non Map</string>
    <string name="address">Address:</string>
    <string name="find">Go</string>
    <string name="set_search_area_on_map">Set search area on map</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ok">OK</string>
    <string name="load_search_btn_txt">Load My Search</string>
    <string name="show_on_map">Show on map</string>
    <string name="error_message_no_search_saved_yet">You didn\'t save a search yet</string>
    <string name="error_message_search_saving_failed">Failed to save your search</string>
    <string name="success_message_search_saved">Your search is saved!</string>
    <string name="pick_sort_column">Pick a column for sort</string>
    <string name="sort_results_btn_txt">Sort Results</string>
    <string name="unspecified">Unspecified</string>
    <string name="details">Details</string>
    <string name="navigate_to_apartment">Navigate to\nApartment</string>
    <string name="share_with_str">Share with:</string>
    <string name="enter_email_txt">Enter Email</string>
    <string name="results_sorted_message">"Results sorted by "</string>
    <string name="choose_contact_str">Choose Contact</string>
    <string name="choose_new_contact_to_chat_str">Choose Contact to Chat With</string>
    <string name="enter_msg_str">Message Content</string>
    <string name="recent_conversations">Recent Conversations</string>
    <string name="first_name_txt">First name: </string>
    <string name="last_name_txt">Last name: </string>
    <string name="rent_buy_chooser_txt">Type</string>
    <string name="faild_to_share_apartment_str">Faild to share apartment</string>
    <string name="apartemnt_image_description">Main partment photo</string>
    <string name="apartment_photos">apartment_photo</string>
    <string name="mandatory_field">*</string>
    <string name="loading">Loading..</string>
    <string name="set_comment_str">Set\nComment</string>
    <string name="touch_to_see_add_photos_str">Touch to see/add photos</string>
    <string name="switch_to_map_search">Switch to Map Search</string>
    <string name="switch_to_address_search">Switch to Address Search</string>
    <string name="address_book">Address Book</string>
    <string name="i_want_to_">I want to..</string>
    <string name="rent_buy_an_apartment">Rent/Buy an apartment</string>
    <string name="publish_an_apartment_for_sell_rent">Publish an apartment</string>

</resources>