<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <com.postpc.homeseek.widget.CustomTextView
        android:id="@+id/meetup_date_txt"
        android:text="@string/date"
        android:layout_margin="5dp"        
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <com.postpc.homeseek.widget.CustomTextView
        android:id="@+id/meetup_visitors_txt"
        android:text="@string/visitors"
        android:layout_margin="5dp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textStyle="bold" />
    
	<com.postpc.homeseek.widget.CustomTextView
        android:id="@+id/meetup_hours_txt"
        android:text="@string/hours"
        android:layout_margin="5dp"        
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textStyle="bold" />
	
</LinearLayout>
