<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ErrorOccurredActivity" >

    <ImageView
        android:id="@+id/error_sign_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/error_sign"
        android:src="@drawable/error_sign" />

    <com.postpc.homeseek.widget.CustomButton
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/error_sign_img"
        android:background="@drawable/custom_button_sign_up"
        android:onClick="onOkClick"
        android:text="@string/ok_btn_txt"
        android:textColor="@color/light_blue_txt" />

    <com.postpc.homeseek.widget.CustomTextView
        android:id="@+id/error_occurred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/error_sign_img"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/error_sign_img"
        android:text="@string/error_has_occurred_txt"
        android:textColor="@color/dark_blue_txt" />

</RelativeLayout>