<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <com.postpc.homeseek.widget.CustomTitleTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/add_visiting_hours_str"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_blue_txt" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.postpc.homeseek.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/date_str" />

            <com.postpc.homeseek.widget.CustomButton
                android:id="@+id/date_btn"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.postpc.homeseek.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/start_hour_str" />

            <com.postpc.homeseek.widget.CustomButton
                android:id="@+id/start_hour_btn"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.postpc.homeseek.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/end_hour_str" />

            <com.postpc.homeseek.widget.CustomButton
                android:id="@+id/end_hour_btn"
                style="?android:attr/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <com.postpc.homeseek.widget.CustomButton
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_login"
                android:onClick="onSaveClick"
                android:text="@string/ok_btn_txt"
                android:textColor="@color/light_blue_txt" />

            <com.postpc.homeseek.widget.CustomButton
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_login"
                android:onClick="onCancelClick"
                android:text="@string/cancel_btn_txt"
                android:textColor="@color/light_blue_txt" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>